--- a/server/index.html
+++ b/server/index.html
@@ -158,8 +158,8 @@
 				border: #ECECEC 2px solid;
 				margin: 5px;
 				padding:10px;
-				height:540px;
-				overflow:scroll;
+				/*height:540px;
+				overflow:scroll;*/
 			}
 		</style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
