--- a/server/index.html
+++ b/server/index.html
@@ -142,7 +142,7 @@
 				padding:10px;
 				margin:5px;
 				text-align:center;
-				vertical-align:middle;
+				vertical-align:top;
 				cursor:pointer;
 			}
 			.crate_item_crate:hover
@@ -151,7 +151,7 @@
 			}
 			.crate_item_crate img
 			{
-				width:80px;
+				height:64px;
 				padding-bottom:10px;
 				cursor:pointer;
 			}
